force-app/main/default/objects/Committee_Membership_District360__c/Committee_Membership_District360__c.object-meta.xml
<CustomObject>
    <description>Committee Membership  are used to capture any individual&apos;s Committee members information like Committee start date, Committee member status etc</description>
    <label>Committee Membership</label>
    <nameField>
        <displayFormat>CM-{0000}</displayFormat>
        <label>Committee Membership Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Committee Memberships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>