force-app/main/default/objects/Committee_Membership_District360__c/fields/Committee_District360__c.field-meta.xml
<CustomField>
    <fullName>Committee_District360__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Committee</label>
    <referenceTo>Committee_District360__c</referenceTo>
    <relationshipLabel>Committee Memberships</relationshipLabel>
    <relationshipName>Committee_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>