force-app/main/default/objects/Committee_Membership_District360__c/fields/CommitteeMember_District360__c.field-meta.xml
<CustomField>
    <fullName>CommitteeMember_District360__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Committee Member</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Committee Memberships</relationshipLabel>
    <relationshipName>Committee_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>