force-app/main/default/objects/Committee_Membership_District360__c/fields/Notes_District360__c.field-meta.xml
<CustomField>
    <fullName>Notes_District360__c</fullName>
    <label>Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>