force-app/main/default/objects/Committee_Membership_District360__c/fields/Role_District360__c.field-meta.xml
<CustomField>
    <fullName>Role_District360__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chair</fullName>
            </value>
            <value>
                <fullName>Co-Chair</fullName>
            </value>
            <value>
                <fullName>Emeritus Board Member</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>President</fullName>
            </value>
            <value>
                <fullName>Primary Contact</fullName>
            </value>
            <value>
                <fullName>Secretary</fullName>
            </value>
            <value>
                <fullName>Treasurer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>